--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
 }
 
 tasks.named('test') {
