--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,13 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
     implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
     implementation 'com.amazonaws:aws-java-sdk-s3'
+    implementation 'commons-io:commons-io:2.6'
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+bootJar {
+    archiveFileName = 'jobmatch.jar'
 }
