--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: jobmatch
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://mysql-server:3306/JOB_MATCH?createDatabaseIfNotExist=true
-    url: jdbc:mysql://203.145.47.68:3308/JOB_MATCH?createDatabaseIfNotExist=true
+    url: jdbc:mysql://mysql-server:3306/JOB_MATCH?createDatabaseIfNotExist=true
+#    url: jdbc:mysql://203.145.47.68:3308/JOB_MATCH?createDatabaseIfNotExist=true
     username: root
     password: 1
 
@@ -28,3 +28,4 @@ host:
   company: http://203.145.47.68:8090/uploads/companyImages/
   job: http://203.145.47.68:8090/uploads/jobImages/
   cv: http://203.145.47.68:8090/uploads/cv/
+  avatar: http://203.145.47.68:8090/uploads/avatar/
